intermidiate Responsive to any size of screen

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <img src="img/chef.png" alt="" />
           </div>
         </div>
-        <div class="radius test cobb-salad-card">
+        <div class="radius cobb-salad-card food-card">
           <div class="recip-card">
             <div class="text-container">
               <h2>Mediterranean Cobb Salad</h2>
@@ -333,7 +333,7 @@
             </div>
           </div>
         </div>
-        <div class="radius cesar-salad-card">
+        <div class="radius cesar-salad-card food-card">
           <div class="small-recip-card">
             <div class="image-container">
               <img src="img/cesar.png" alt="" />
@@ -354,7 +354,7 @@
             </div>
           </div>
         </div>
-        <div class="radius greek-salad-card">
+        <div class="radius greek-salad-card food-card">
           <div class="small-recip-card greek">
             <div class="image-container">
               <img src="img/greek.png" alt="" />
